@@ -1,1 +1,2 @@
 co.elastic.apm.agent.spring.scheduled.ScheduledTransactionNameInstrumentation
+co.elastic.apm.agent.spring.scheduled.TimerTaskInstrumentation
