@@ -358,6 +358,12 @@ When using a scheduling framework a transaction for every execution will be crea
 
 NOTE: only classes from the quartz-jobs dependency will be instrumented automatically. For the instrumentation of other jobs the package must be added to the <<config-application-packages>> parameter.
 |1.8.0
+
+|TimerTask
+|
+|The agent instruments the `run` method in a package configured in <<config-application-packages>> of any class extending `java.util.TimerTask`, and creates a transaction with the type `scheduled`, representing the job execution
+|1.18.0
+
 |===
 
 [float]
